--- a/index.html
+++ b/index.html
@@ -1,8 +1,21 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h4>Testing from Sean</h4>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
+    <div class="row">
+      <div>
+        <h1>Hello World</h1>
+        <p>I'm hosted with GitHub Pages.</p>
+      </div>
+      <div>
+        <h4>Testing from Sean</h4>
+      </div>
+    </div>
   </body>
+
+  <style>
+    .row {
+      display: flex;
+      flex-direction: row;
+    }
+  </style>
 </html>
