Moved styles to external file

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+
   <body>
     <div class="row">
       <div>
@@ -11,11 +15,4 @@
       </div>
     </div>
   </body>
-
-  <style>
-    .row {
-      display: flex;
-      flex-direction: row;
-    }
-  </style>
 </html>
