under construction page
place holder for future web page

--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="styles.css" />
+    <!-- <link rel="stylesheet" href="styles.css" /> -->
+    <style>body{background-color:palegoldenrod}
+    </style>
   </head>
 
   <body>
-    <div class="row">
-      <div>
-        <h1>Hello World</h1>
-        <p>I'm hosted with GitHub Pages.</p>
-      </div>
-      <div>
-        <h4>Testing from Sean</h4>
-      </div>
-    </div>
+    <h1 style="color:sienna;text-align:center;">Melissa Neal 
+        <br><bigger>2024</bigger>
+        <br> Art Portfolio</h1>
+    
+    <img style="text-align:center;" src="https://pngimg.com/uploads/bee/bee_PNG74679.png" 
+    alt="Construction Bee" width="60" height="60" title="Construction Bee">
+    <p style="text-align:center;"> Under construction...</p>
   </body>
 </html>
