--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
         <br><bigger>2024</bigger>
         <br> Art Portfolio</h1>
     
-    <img style="text-align:center;" src="https://pngimg.com/uploads/bee/bee_PNG74679.png" 
-    alt="Construction Bee" width="60" height="60" title="Construction Bee">
+    <img src="https://pngimg.com/uploads/bee/bee_PNG74679.png" 
+    alt="Construction Bee" width="60" height="60" title="Construction Bee"
+    class="center">
     <p style="text-align:center;"> Under construction...</p>
   </body>
 </html>
