--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <!-- <link rel="stylesheet" href="styles.css" /> -->
-    <style>body{background-color:palegoldenrod}
+    <style>
+    body{background-color:palegoldenrod}
+    img {display: block;margin-left: auto;margin-right: auto;}
     </style>
   </head>
 
@@ -12,8 +14,7 @@
         <br> Art Portfolio</h1>
     
     <img src="https://pngimg.com/uploads/bee/bee_PNG74679.png" 
-    alt="Construction Bee" width="300" height="300" title="Construction Bee"
-    class="center">
+    alt="Construction Bee" width="300" height="300" title="Construction Bee">
     <p style="text-align:center;"> Under construction...</p>
   </body>
 </html>
