text size change

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
 
   <body>
-    <h1 style="color:sienna;text-align:center;">Melissa Neal 
-        <br><bigger>2024</bigger>
+    <h1 style="color:sienna;text-align:center;font-size:80px;">Melissa Neal 
+        <br><b style="font-size:100px;">2024</b>
         <br> Art Portfolio</h1>
     
     <img src="https://pngimg.com/uploads/bee/bee_PNG74679.png" 
