--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   </head>
 
   <body>
-    <h1 style="color:sienna;text-align:center;font-size:80px;">Melissa Neal 
-        <br><b style="font-size:100px;">2024</b>
+    <h1 style="color:sienna;text-align:center;font-size:50px;">Melissa Neal 
+        <br><b style="font-size:60px;">2024</b>
         <br> Art Portfolio</h1>
     
     <img src="https://pngimg.com/uploads/bee/bee_PNG74679.png" 
     alt="Construction Bee" width="300" height="300" title="Construction Bee">
-    <p style="text-align:center;"> Under construction...</p>
+    <p style="text-align:center;"> <b>under construction...</b></p>
   </body>
 </html>
